User can now register, authenticate and join a game all using communication protocol between client and server